@@ -129,7 +129,7 @@ const u_short holes[256] = {
 #define	bit(w,i)	((w)&(1<<(i)))
 
 int	main __P((int, char *[]));
-void	printcard __P((char *));
+void	printcard __P((unsigned char *));
 
 int
 main(argc, argv)
@@ -148,10 +148,10 @@ main(argc, argv)
 
 	if (argc > 1) {
 		while (--argc)
-			printcard(*++argv);
+			printcard((unsigned char *)*++argv);
 	} else
 		while (fgets(cardline, sizeof(cardline), stdin))
-			printcard(cardline);
+			printcard((unsigned char *)cardline);
 	exit(0);
 }
 
@@ -159,17 +159,17 @@ main(argc, argv)
 
 void
 printcard(str)
-	char *str;
+	unsigned char *str;
 {
 	static const char rowchars[] = "   123456789";
 	int i, row;
 	unsigned char *p;
 
 	/* ruthlessly remove newlines and truncate at 48 characters. */
-	if ((p = strchr(str, '\n')))
+	if ((p = (unsigned char *)strchr((char *)str, '\n')))
 		*p = '\0';
 
-	if (strlen(str) > COLUMNS)
+	if (strlen((char *)str) > COLUMNS)
 		str[COLUMNS] = '\0';
 
 	/* make string upper case. */
