@@ -67,8 +67,8 @@
 
 #ifdef BSD
 #define	SUSPEND		/* let ^Z suspend the game */
-#endif BSD
-#endif UNIX
+#endif /* BSD */
+#endif /* UNIX */
 
 #ifdef CHDIR
 /*
@@ -77,9 +77,9 @@
  */
 #ifdef QUEST
 #define HACKDIR _PATH_QUEST
-#else QUEST
+#else /* QUEST */
 #define HACKDIR	_PATH_HACK
-#endif QUEST
+#endif /* QUEST */
 
 /*
  * Some system administrators are stupid enough to make Hack suid root
@@ -95,7 +95,7 @@
  * simultaneously, define HACKDIR, SECURE and MAX_NR_OF_PLAYERS.
  * #define MAX_NR_OF_PLAYERS	100
  */
-#endif CHDIR
+#endif /* CHDIR */
 
 /* size of terminal screen is (at least) (ROWNO+2) by COLNO */
 #define	COLNO	80
